fix(style): Added an overflow-x for the pre element.

--- a/src/components/chat/themes/message.base.scss
+++ b/src/components/chat/themes/message.base.scss
@@ -30,4 +30,8 @@
     margin: 0;
     padding: 0;
   }
+
+  pre {
+    overflow-x: auto;
+  }
 }
